test/fail/integration/_fail_sem_decl_funct_1.hs
x y = y
main = print "hello"